<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                       http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cz.fb.manaus</groupId>
    <artifactId>manaus-common</artifactId>
    <version>2.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>${project.artifactId}:${project.version}</name>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>1.4.2.RELEASE</version>
    </parent>
    <modules>
        <module>providers/betfair-ng</module>
        <module>providers/matchbook</module>
        <module>mns-core</module>
        <module>mns-scheduler</module>
        <module>mns-reactor</module>
        <module>mns-rest</module>
    </modules>

    <properties>
        <hibernate.version>5.2.4.Final</hibernate.version>
        <jackson.version>2.8.4</jackson.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.5.1</version>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <enableAssertions>false</enableAssertions>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-core</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-core</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-reactor</artifactId>
                <type>test-jar</type>
                <scope>test</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-reactor</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-scheduler</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>manaus-rest</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>betfair-ng</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>cz.fb.manaus</groupId>
                <artifactId>matchbook</artifactId>
                <scope>compile</scope>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>4.5.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jdk8</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-annotations</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-math3</artifactId>
                <version>3.6.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.5</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-dbcp2</artifactId>
                <version>2.1.1</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>19.0</version>
            </dependency>

            <!--core dependencies-->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.193</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-ehcache</artifactId>
                <version>${hibernate.version}</version>
            </dependency>
            <dependency>
                <groupId>mysql</groupId>
                <artifactId>mysql-connector-java</artifactId>
                <version>5.1.25</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.flywaydb</groupId>
                <artifactId>flyway-core</artifactId>
                <version>4.0.3</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

</project>
